# memo-io

./: .hooky.kdl  CHANGELOG.md  LICENSE.md  README.md  cabal.project  memo-io.cabal
.github/workflows/: ci.yml  release.yml
example/: Global.hs  Memo.hs
scripts/: release_notes.py
src/: MemoIO.hs
src/MemoIO/: Global.hs
src/MemoIO/Internal/: Global.hs  Memo.hs
tools/: fourmolu
