cabal-version: 3.0

name: memo-io
version: 1.0.0
synopsis: Memoize and global IO utilities.
description: Memoize and global IO utilities. See README for more details.
homepage: https://github.com/brandonchinn178/memo-io#readme
bug-reports: https://github.com/brandonchinn178/memo-io/issues
author: Brandon Chinn <brandonchinn178@gmail.com>
maintainer: Brandon Chinn <brandonchinn178@gmail.com>
license: BSD-3-Clause
license-file: LICENSE.md
category: Data, Reflection
build-type: Simple
extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/brandonchinn178/skeletest

flag global-io
  description: Whether to include globalIO functionality
  default: True
  manual: True

library
  hs-source-dirs: src
  exposed-modules:
    MemoIO
    MemoIO.Internal.Memo
  build-depends:
    , base < 5
  default-language: Haskell2010
  ghc-options: -Wall -O2

  if flag(global-io)
    exposed-modules:
      MemoIO.Global
      MemoIO.Internal.Global
    build-depends:
      , hashable
      , unordered-containers
    cpp-options: -DGLOBALIO_ENABLED

    if impl(ghc < 9.0)
      build-depends: ghc-prim
    if impl(ghc < 8.2.1)
      buildable: False

test-suite example-memo
  type: exitcode-stdio-1.0
  main-is: example/Memo.hs
  build-depends:
    , base < 5
    , memo-io
    , time
  default-language: Haskell2010
  ghc-options: -Wall -O2

test-suite example-global
  type: exitcode-stdio-1.0
  main-is: example/Global.hs
  build-depends:
    , base < 5
    , memo-io
    , time
  default-language: Haskell2010
  ghc-options: -Wall -O2

  if !flag(global-io)
    buildable: False
